--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 table, th, td {
    border-collapse: collapse;
-   text-align: ;
+   text-align: center;
+   font-size: =100%;
+   
   
 }
 th, td {
