font weight changes

--- a/indulo_vonatok.css
+++ b/indulo_vonatok.css
@@ -49,6 +49,7 @@ td {
     border-style: none;
 }
 
-/* a {
-    line-height: 50px;
-} */
+tbody {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+}
