--- a/indulo_vonatok.css
+++ b/indulo_vonatok.css
@@ -53,3 +53,8 @@ tbody {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
+
+td, th:hover {
+    color: aliceblue;
+} 
+    
